--- a/environment.yaml
+++ b/environment.yaml
@@ -3,7 +3,7 @@
 # also make sure to install the local packages with the "-e" prefix
 # to create an environment: conda env create -f environment.yaml
 # to update: conda env update -f environment.yaml
-name: robilglue
+name: imitation_button
 channels:
   - pytorch
   - conda-forge
